--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="KittyKat.jpg"
+    >
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="KittyKat.jpg"
+      title="Nice Kitty"
+    >
   </body>
 </html>
